# clipforge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/clipforge-cli/: Cargo.toml
crates/clipforge-cli/src/: main.rs
crates/clipforge-core/: Cargo.toml
crates/clipforge-core/src/: error.rs  lib.rs  process.rs
crates/clipforge-core/src/audio/: mod.rs
crates/clipforge-core/src/capture/: mod.rs  x11.rs
crates/clipforge-core/src/config/: mod.rs
crates/clipforge-core/src/doctor/: mod.rs
crates/clipforge-core/src/encode/: ffmpeg.rs  hw_probe.rs  mod.rs  presets.rs
crates/clipforge-core/src/export/: mod.rs  pipeline.rs  presets.rs
crates/clipforge-core/src/hotkeys/: mod.rs
crates/clipforge-core/src/replay/: mod.rs  ring.rs  save.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: export.rs  library.rs  mod.rs  recording.rs  replay.rs  system.rs
ui/: index.html  package.json
ui/src/: App.tsx  index.css  main.tsx
ui/src/lib/: tauri.ts
ui/src/pages/: Export.tsx  Library.tsx  Recorder.tsx  Settings.tsx
ui/src/stores/: recording.ts
