[package]
name = "clipforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clipforge"
path = "src/main.rs"

[dependencies]
clipforge-core = { path = "../clipforge-core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
